# AI-Infra

./: .env.example  .gitignore  README.md  run.md
common/: bge_embedding.py  bge_reranker.py  config.py  cors.py  hybrid_search.py  ingest_queue.py  logger.py  metrics.py  mlops_queue.py  model_router.py  prompt_utils.py  security.py  tracing.py
deploy/docker-compose/: .env.example  docker-compose.yml
deploy/k8s/: agent.yaml  configmap.yaml  console.yaml  etcd.yaml  gateway.yaml  inference.yaml  kustomization.yaml  milvus.yaml  minio.yaml  mysql.yaml  namespace.yaml  rag.yaml  redis.yaml  secret.example.yaml
deploy/k8s/monitoring/: grafana.yaml  (+2 more)
scripts/: download_bge_models.py  init_db.sql  init_db_p1.sql  init_db_p2.sql  init_db_p3.sql  init_db_rag.sql  k8s_create_secret.ps1  k8s_create_secret.sh  k8s_deploy.ps1  k8s_deploy.sh  run_agent.py  run_console.ps1  run_console.sh  run_gateway.py  run_inference.py  run_mlops.py  run_rag.py  start.ps1  start.sh
sdk/java/: README.md  pom.xml
sdk/python/: README.md  pyproject.toml
sdk/python/aiinfra/: __init__.py  _http.py  agent.py  gateway.py  rag.py
sdk/python/examples/: basic_usage.py
sdk/typescript/: README.md  package.json  tsconfig.json
services/agent/: Dockerfile  requirements.txt
services/gateway/: Dockerfile  requirements.txt
services/inference/: Dockerfile  requirements.txt
services/mlops/: Dockerfile  requirements.txt
services/rag/: Dockerfile  requirements-bge.txt  requirements-multimodal.txt  requirements.txt
web/console/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
(+70 files in other folders)
